--- a/env.example
+++ b/env.example
@@ -18,4 +18,5 @@ DATABASE_DB=esport_schedule
 DATABASE_USER=esport_schedule
 DATABASE_PASSWORD=esport_schedule
 DATABASE_ROOT_PASSWORD=root
+DATABASE_HOST=database
 DATABASE_PORT=3306
