--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ frontend/node_modules
 src/main/resources/static/frontend
 .env
 src/main/resources/env.properties.lnk
+src/main/resources/env.properties
